Fix background color
Background color not fully covering the screen when keyboard is in view on mobile

--- a/src/App.sass
+++ b/src/App.sass
@@ -16,14 +16,14 @@ input::-webkit-inner-spin-button
 // Firefox
 input[type=number]
   -moz-appearance: textfield
-  
 
 .app
   font-family: 'Montserrat', sans-serif
   text-align: center
   background: $dark-background
   color: $light-color
-  height: 100vh
+  min-height: 100vh
+  padding: 0 10px
 
   .titleContainer
     padding: 50px 0
@@ -34,7 +34,7 @@ input[type=number]
   .container
     display: grid
     justify-content: center
-    grid-template-columns: 200px 200px
+    grid-template-columns: minmax(auto, 200px) minmax(auto, 200px)
     grid-auto-rows: 100px
     grid-gap: 10px
 
@@ -49,7 +49,7 @@ input[type=number]
       background: #2a3042
       border: none
       border-radius: 6px
-      width: -webkit-fill-available
+      width: calc(100% - 20px)
       padding: 10px
       &:focus
         outline: none
